# Argos-disk-used-space-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: design-review.md  memory-load.md  memory-save.md  plan.md  scan-test.md  spec.md  tdd.md
.claude/memory/: MEMORY.md  README.md  current.md
.claude/memory/archive/: 2026-04-16-M1-complete.md  2026-04-16-M2-complete.md  2026-04-18-1743.md  2026-04-18-1824.md  2026-04-18-1830.md  2026-04-18-1900.md  2026-04-18-M4-complete.md  2026-04-18-M6-complete.md  2026-04-18-M7-complete.md  2026-04-18-M8-complete.md  2026-04-19-1534.md  2026-04-19-1620-premilestone.md  2026-04-19-1638.md  2026-04-20-1315.md  2026-04-21-1439.md
.claude/memory/decisions/: 0001-python-backend-react-frontend.md  0002-do-not-follow-symlinks.md  0003-synchronous-scanner.md  0004-no-auth-config-bootstrap.md  0005-lazy-scanning-over-full-scan.md
.claude/memory/lessons/: app-state-lifespan-vs-create-app.md  backend-venv-required.md  fastapi-depends-websocket.md  fnmatch-double-star.md  force-graph-nodethreeobject-extend.md  httpx-asgi-transport.md  i18n-key-interpolation-tests.md  lucide-react-icon-existence.md  mypy-ctypes-windll.md  npm-not-pnpm-in-bash.md  path-stat-monkeypatch.md  pointer-drag-listeners-scope.md  react-force-graph-nodeval-is-volume.md  recharts-tooltip-formatter-type.md  rtl-i18n-key-regex.md  send2trash-import-alias.md  sort-toggle-null-initial.md  tanstack-virtual-jsdom.md  tkinter-lazy-import-noqa.md  tsx-string-attr-escape.md  vite-config-vitest-types.md  vitest-i18next-setup.md  webgl-libs-jsdom.md  windows-junction-detection.md
.claude/skills/context-engineering/: SKILL.md
.claude/skills/debug-systematically/: SKILL.md
.claude/skills/lean-context/: SKILL.md
.claude/skills/persistent-memory/: SKILL.md
.claude/skills/spec-driven-development/: SKILL.md
.claude/skills/tdd-discipline/: SKILL.md
.claude/skills/ui-ux-excellence/: SKILL.md
backend/: app.py  config.py
backend/api/: dependencies.py  filesystem.py  health.py  scan.py  system.py
backend/core/: cache.py  errors.py  models.py  scanner.py  windows_utils.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  test-setup.ts
frontend/src/components/explorer/: AdminBadge.tsx  RelaunchAdminButton.tsx  RequireScan.tsx  TopMenuBar.tsx
frontend/src/components/home/: FolderPicker.tsx  RecentScans.tsx  ScanProgress.tsx
frontend/src/components/layout/: AuroraBackground.tsx  Footer.tsx  Header.tsx  ResizeHandle.tsx
frontend/src/components/ui/: ConfirmDialog.tsx  (+4 more)
frontend/src/hooks/: usePrefersReducedMotion.ts
frontend/src/i18n/: en.json  es.json  index.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: Explorer.tsx  Home.tsx
frontend/src/stores/: appStore.ts  columnWidthsStore.ts  explorerStore.ts  scanStore.ts  settingsStore.ts
frontend/src/styles/: globals.css
specs/m0-scaffolding/: plan.md
specs/m1-scanner-core/: plan.md  spec.md  tasks.md
specs/m10-graph3d-view/: plan.md  spec.md  tasks.md
specs/m11-polish/: plan.md  spec.md  tasks.md
specs/m12-admin-settings/: plan.md  spec.md
specs/m13-ux-refinements/: plan.md  spec.md  tasks.md
specs/m14-lazy-scanning/: plan.md  spec.md  tasks.md
specs/m2-api-layer/: plan.md  spec.md  tasks.md
specs/m3-home-screen/: plan.md  spec.md  tasks.md
specs/m4-explorer-scaffold/: plan.md  spec.md  tasks.md
specs/m5-folder-tree/: plan.md  spec.md  tasks.md
specs/m6-contents-panel/: plan.md  spec.md  tasks.md
specs/m7-insights-panel/: plan.md
specs/m8-deletion-explorer/: plan.md  spec.md  tasks.md
specs/m9-theme-i18n/: plan.md  spec.md  tasks.md
tests/: conftest.py
tests/integration/: test_api_scan.py  test_health.py  test_relaunch_endpoint.py  test_scans_bulk_delete.py  test_ws_scan.py
tests/unit/: test_cache.py  test_cache_clear.py  test_config.py  test_errors.py  test_filesystem_api.py  test_models.py  test_scanner.py  test_scanner_exclusions.py  test_scanner_level.py  test_system_api.py  test_windows_utils.py
(+60 files in other folders)
