[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argos"
version = "0.1.0"
description = "A local-first disk space visualizer for Windows with a modern web UI and 3D graph view. Named after Argos Panoptes, the ever-watchful guardian of Greek myth."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Your Name" }]
keywords = ["disk", "space", "visualizer", "windows", "local"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiosqlite>=0.20.0",
    "send2trash>=1.8.3",
    "python-multipart>=0.0.12",
    "websockets>=13.1",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "types-pywin32; sys_platform == 'win32'",
]

[project.scripts]
argos = "main:main"

[tool.setuptools]
packages = ["backend"]

# ---------------------------------------------------------------------------
# Ruff: linter + formatter (replaces black, isort, flake8, pyupgrade)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "PL",   # pylint
    "TRY",  # tryceratops (better exception handling)
    "ASYNC",# flake8-async
    "PTH",  # use pathlib
    "RET",  # flake8-return
    "ARG",  # unused function arguments
]
ignore = [
    "E501",    # line length handled by formatter
    "PLR0913", # too many arguments
    "TRY003",  # long messages in exceptions — fine for this project
    "B008",    # FastAPI's Depends() in argument defaults is intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "ARG", "S101"]  # allow magic values, unused args, asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy: strict typing on core; relaxed elsewhere
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "backend.core.*"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "windows_only: tests that require Windows",
    "admin_required: tests that require administrator privileges",
    "slow: tests that take more than 1s",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:websockets.*",
    "ignore:The 'app' shortcut is now deprecated:DeprecationWarning:httpx.*",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["backend"]
branch = true
omit = [
    "backend/static/*",
    "*/tests/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
